remove cargo plugin